codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: terminal.backend()
---

Выберите рабочую папку для этой сессии

  Сессия = последняя папка из сохранённой сессии
  Текущая папка = ваша текущая рабочая папка

› 1. Использовать папку из сессии (/Users/example/session)
  2. Использовать текущую папку (/Users/example/current)

  Нажмите Enter чтобы продолжить
